[tool.poetry]
name = "Hangman"
version = "0.1.0"
description = ""
authors = ["Taylor <taylor@odinware.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
